Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gstreamer
gstreamer
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 405
    • Issues 405
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 80
    • Merge Requests 80
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GStreamer
  • gstreamergstreamer
  • Issues
  • #530

Closed
Open
Opened Apr 02, 2020 by U. Artie Eoff@ullysses.a.eoffReporter

[regression] baseparse cache fix breaks h264parse and h265parse

gst-launch-1.0 -vf filesrc location=h264/alphaconformanceG.264 ! h264parse ! fakesink

ERROR:../gst/videoparsers/gsth264parse.c:1315:gst_h264_parse_handle_frame: assertion failed: (current_off < size)

Since !422 (merged), commit e906197c :

commit e906197c622725e48b6250a71a922d45b006fb14
Author: Jan Schmidt <jan@centricular.com>
Date:   Wed Apr 1 02:36:40 2020 +1100

    baseparse: Fix upstream read caching
    
    When running in pull mode (for e.g. mp3 reading),
    baseparse currently reads 64KB from upstream, then mp3parse
    consumes typically around 417/418 bytes of it. Then
    on the next loop, it will read a full fresh 64KB again,
    which is a big waste.
    
    Fix the read loop to use the available cache buffer first
    before going for more data, until the cache drops to < 1KB.
    
    Fixes https://gitlab.freedesktop.org/gstreamer/gstreamer/issues/518

Reverting this commit fixes the regression.

Also seeing similar error with some h265parse use-cases.

Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: gstreamer/gstreamer#530